Added Visual Interface
There isn't any restart functionality yet.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Tic Tac Toe By SOHEL</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="tic-tac-toe">
+        </div>
+    </div>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
