Added Winning & Draw Condition & Animations
Added reset & restart button & background

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Tic Tac Toe By SOHEL</title>
 </head>
 <body>
+    <div id="programmer-container">
+        <h1>Tic Tac Toe By <a href="https://github.com/5OH3L" target="_blank" rel="noreferrer noopener" id="programmer">5OH3L</a></h1>
+    </div>
     <div id="container">
         <div id="tic-tac-toe">
         </div>
+        <div id="reset">RESET</div>
+        <div id="pop-up-container">
+            <div id="pop-up" class="close">
+                <div id="winningMessage"></div>
+                <button id="restart">RESTART</button>
+            </div>
+        </div>
+        <div id="pop-up-background" class="close"></div>
     </div>
     <script src="./javascript/script.js"></script>
 </body>
